# video-rag-pro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark_comparison.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup_models.py  sudo  test_chat.py  test_full_search.py  test_ingest.py  test_integration.py
.github/workflows/: ci.yml
docs/: architecture_notes.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/video_knowledge/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/video_knowledge/0/segments/4c8dc777-8a0a-4c42-9b31-e9e2ad6ff5dc/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/947a2dd6-8fc1-42e9-8e05-c1773104cb66/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/abbe7001-5a29-493e-b642-c47281424a79/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/video_knowledge/0/segments/b98f3e6c-c819-41de-9086-96fbf1ad659e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/c035c9a4-bc06-40ac-8f11-cf328b62becb/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/c36350e1-e1cf-451e-aa03-0a3e47b1338b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/cbfb8786-cbbf-4c73-b524-c49442114316/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/video_knowledge/0/segments/e781aa1f-2245-4617-be1a-1cdceef80189/: mutable_id_tracker.mappings  mutable_id_tracker.versions
scripts/: benchmark_comparison.py
src/: main_ingest.py
src/core/: chunking.py  rag_engine.py  transcriber.py
src/database/: vector_store.py
src/frontend/: app.py
src/services/: visual_ingestion.py
src/video_processing/: frame_extractor.py  ocr_service.py
tests/: test_async_ingest.py  test_chat.py  test_chunking.py  test_full_search.py  test_ingest.py  test_ocr_service.py  test_transcriber.py  test_vector_store.py  test_visual_prompt.py
