[tool.poetry]
name = "video-rag-pro"
version = "0.1.0"
description = "Video RAG Professional Engine"
authors = ["Roberto <tu_email@ejemplo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
qdrant-client = "^1.7.3"
sentence-transformers = "^2.3.1"
fastembed = "^0.2.0"
streamlit = "^1.31.1"
yt-dlp = "^2023.11.16"
faster-whisper = "^1.0.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
types-requests = "^2.31.0"

# --- CONFIGURACIÓN DE RUFF (LINTING & FORMATTING) ---
[tool.ruff]
# Configuración Global
line-length = 102
indent-width = 4
target-version = "py311"

# Carpetas a ignorar (Aquí es donde daba el error de .git antes)
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
]

[tool.ruff.lint]
# Reglas activas: E (Error), F (Pyflakes)
select = ["E", "F"]
ignore = []

# Permitir arreglar todo automáticamente
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignorar líneas largas solo en los tests
"tests/*" = ["E501"]

# --- CONFIGURACIÓN DE MYPY (TYPE CHECKING) ---
[tool.mypy]
python_version = "3.11"
# EXCLUSIÓN IMPORTANTE: MyPy no mirará la carpeta tests
exclude = ["tests"]

# Reglas estrictas para el código real
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
